refactor: toList() 불변형으로 변경